# zine

./: .dockerignore  .gbrain-source  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  HANDOFF.md  README.md  TODOS.md  docker-compose.yml  package-lock.json  package.json
.claude/: launch.json
.githooks/: post-checkout
.github/workflows/: verify.yml
.zcode/plans/: plan-sess_52f91be2-70bb-4c16-8464-ebe6f5056069.md  plan-sess_5464d5fa-4651-41c1-8f92-6ccf216021f0.md  plan-sess_6a86f6fb-ce0f-417c-a658-92c6a3d20d63.md  plan-sess_70f1e985-dd8d-41c4-9b2d-1f0648cc119b.md
apps/client/: FORK-ON-WRITE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
apps/client/scripts/: prompt-eval.ts
apps/client/src/: About.tsx  AffirmModal.tsx  App.css  App.tsx  AttestModal.tsx  Download.tsx  Friends.tsx  Globe.tsx  KeysView.tsx  ListingsView.tsx  LlmReconstructPanel.tsx  MergePanel.tsx  MergePreviewModal.tsx  ModelsView.tsx  Networking.tsx  OblivionModal.tsx  Onboarding.tsx  OperatorView.tsx  OrchestrationTimeline.tsx  PalettePanel.tsx  PinPanel.tsx  PromptInspectorModal.tsx  PubkeyDisplay.tsx  Relays.tsx  RunModal.tsx  SecurityBootstrap.tsx  TimesChart.tsx  TimesView.tsx  TraceLocatorModal.tsx  TracesView.tsx  VoiceChip.tsx  VoiceLegend.tsx  about-copy.md  about-documents.test.ts  about-documents.ts  about-layout.test.ts  agent-llm.test.ts  agent-llm.ts  agent-loop.test.ts  agent-loop.ts  (+176 more)
apps/client/src-tauri/: BUILD.md  Cargo.toml  tauri.conf.json
apps/client/src-tauri/binaries/: tor
apps/client/src-tauri/capabilities/: default.json
apps/client/src-tauri/icons/: icon.icns
apps/client/src-tauri/scripts/: make-icon.swift
apps/client/src-tauri/src/: desktop_operation_journal.rs  kademlia.rs  lib.rs  llm_proxy.rs  rendezvous_relay.rs
apps/harness/: package-lock.json  package.json
apps/harness/scripts/: verify-relay.mjs
apps/harness/src/: agent.ts  cli.ts  config.ts  diff.ts  models.ts  pin-restore.test.ts  pin-restore.ts  pins.ts  protocol-kinds.ts  registry.ts  relay-client.ts  store.test.ts  store.ts  voice.ts  watch.ts
apps/mcp/: README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.integration.json  tsconfig.json
apps/mcp/integration/: recursive-checkpoint-recovery.ts  relay-smoke.ts
apps/mcp/scripts/: build.mjs  package-smoke.mjs
apps/mcp/src/: client-env.d.ts  folder-binding.test.ts  folder-binding.ts  folder-conformance-corpus.test.ts  register-writer.test.ts  register-writer.ts  relay-config-override.ts  server.test.ts  server.ts  storage-node.test.ts  storage-node.ts  tools-mint.test.ts  tools-runtime.test.ts  tools.ts  trace-context-selection-adapter.test.ts  trace-context-selection-adapter.ts  websocket-node.test.ts  websocket-node.ts
docs/: COMPANY.md  DESKTOP_OPERATION_LIFECYCLE.md  EVIDENCE.md  PRODUCT.md  PROTOCOL.md  README.md  ROADMAP.md  TRACE_NATIVE_ZINES.md
downloads/: .gitkeep
protocol/: README.md  directors-cut.md  rendezvous.md  trace-provenance.md  transport.md
relay/: access-policy.go  access-policy_test.go  friends.go  go.mod  go.sum  main.go  main_test.go
relay/cmd/hosted/: main.go  main_test.go  operator.go  operator_test.go
research/: narration-rubric.md  results.md  trace-writing-preregistration.md  trace-writing-rubric.md  trace-writing-scoring-rubric.md
research/ab-outputs/: SCORING.md  _run.json
research/c2-outputs/: SCORING-C2.md  _run.json
scripts/: build-relay.mjs  check-go-coverage.mjs  check-go-coverage.test.mjs  dependency-state.mjs  dependency-state.test.mjs  dev.mjs  doctor.mjs  dogfood-macos-lib.mjs  dogfood-macos.mjs  dogfood-macos.test.mjs  source-update.mjs  source-update.test.mjs  test-rust.mjs  test-rust.test.mjs  verify-relay.mjs  verify.mjs
(+355 files in other folders)
