[package]
name = "client"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-stronghold = "=2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3.32"
reqwest = { version = "0.13.4", features = ["stream"] }
tauri-plugin-dialog = "2"
base64 = "0.22"
hex = "0.4"
libp2p = { version = "0.56", features = ["dns", "identify", "kad", "macros", "noise", "tcp", "tokio", "yamux"] }
libc = "0.2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.30", features = ["rustls-tls-native-roots"] }
getrandom = "0.3"
rust-argon2 = "2.1"
sha2 = "0.10"
zeroize = "1"
chacha20poly1305 = "0.10"
hkdf = "0.12"
hmac = "0.12"
rusqlite = { version = "0.38", features = ["bundled"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

[dev-dependencies]
argon2-legacy = { package = "rust-argon2", version = "=1.0.0" }

# Stronghold's password and snapshot KDFs are intentionally expensive. In an
# otherwise-unoptimized dev build their inner loops take minutes, which makes a
# vault appear hung. Optimize only the crypto hot-path dependencies; release
# security parameters and application debuggability remain unchanged.
[profile.dev.package.rust-argon2]
opt-level = 3

[profile.dev.package.scrypt]
opt-level = 3

[profile.dev.package.salsa20]
opt-level = 3

[profile.dev.package.pbkdf2]
opt-level = 3

[profile.dev.package.sha2]
opt-level = 3
